Fixed title case and alignment on login and registration forms, fixes #777

--- a/src/geonode-client/src/theme/app/site.css
+++ b/src/geonode-client/src/theme/app/site.css
@@ -650,6 +650,7 @@ clear: both;
 div#main form ul.form li label {
 display: block;
 font-weight: bold;
+text-transform: capitalize;
 }
 
 div#main form ul.form li input {
